package com.example.ecse_321_demo_backend.models;

import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.OneToMany;
import java.sql.Timestamp;
import java.util.List;
import java.util.UUID;

@Entity
public class User {

  @Id
  @GeneratedValue(strategy = GenerationType.UUID)
  private UUID id;

  private String username;

  private String password;

  private Timestamp created_at;

  @OneToMany
  private List<Location> locations_created;

  public User(String username, String password) {
    this.username = username;
    this.password = password;
  }

  public UUID getId() {
    return id;
  }
}
